fix font size of header on mobile

--- a/frontend/src/components/heading/heading.scss
+++ b/frontend/src/components/heading/heading.scss
@@ -44,11 +44,11 @@ $nav-button-dark-green: #1b5e20;
 
     h1 {
       text-align: center;
-      font-size: 16vmin;
+      font-size: 14vmin;
       padding-bottom: 0.5em;
       padding-right: 15px;
       padding-left: 15px;
-      font-family: "Ostrich-Sans-Rounded", sans-serif;
+      font-family: "Ostrich-Sans-Black", sans-serif;
       font-weight: 900;
       font-style: normal;
     }
