--- a/frontend/src/components/nav/styles/nav.scss
+++ b/frontend/src/components/nav/styles/nav.scss
@@ -67,6 +67,10 @@ $mobile-nav-background-lightgreen: #cdf0c2;
     box-shadow: 0px 0px 2px 0px #1a5e208c;
     padding-left: 2.5vmin;
     padding-right: 2.5vmin;
+
+    button {
+      font-size: 8vw;
+    }
   }
 
   button {
